--- a/DataStructure/算法/递归.md
+++ b/DataStructure/算法/递归.md
@@ -1,6 +1,6 @@
 #  递归
 
-## 递归的基本概念
+## 1. 递归的基本概念
 
 　　在计算机科学领域中，递归是通过函数调用本身来实现的。每次成功调用都使得问题的答案范围越来越小，越来越接近问题的答案。
 
@@ -21,21 +21,21 @@
     }
 ```
 
-　　当 n=1 的时候说明已经到了最小解了，因为 n! 依赖 (n-1)! 的结果，后面以此类推，最后到了 1 的阶乘，前面的以来就依次有解了。
+　　当 n=1 的时候说明已经到了最小解了，因为 n! 依赖 (n-1)! 的结果，后面以此类推，最后到了 1 的阶乘，前面的一来就依次有解了。
 
-### 基线条件
+### 1.1. 基线条件
 
 　　基线条件（base case）就是递归的终止条件，无限递归的函数也没有意义。无限递归不等于无限循环，无限递归是导致栈溢出，而循环不会。
 
 　　上面递归程序中的 if (n==1) 就是基线条件。
 
-### 递归条件
+### 1.2. 递归条件
 
 　　递归条件（recursive case）就是方法调用本身的条件。
 
 　　上面的递归程序中，递归条件就是 n 不等于 1。
 
-### 递归和栈
+### 1.3. 递归和栈
 
 　　递归本质也是函数调用函数，当调用一个函数的时候，会在调用栈（call stack）里创建栈帧（frame）。Java 的函数调用栈与线程一同被创建，属于线程私有，主要用于存储栈帧。
 
@@ -53,9 +53,9 @@
 
    操作数栈主要用于算术运算和方法参数传递。
 
-   比如在方法中执行 a+b，首先会把 a 和 b 压入操作数栈中，然后把 a 和 b 弹出栈进行相家，然后把结果压入操作数栈中。
+   比如在方法中执行 a+b，首先会把 a 和 b 压入操作数栈中，然后把 a 和 b 弹出栈进行相加，然后把结果压入操作数栈中。
 
-   又比如在方法中调用另一个方法，操作数栈用于保护被调用方法的参数和接受该方法的返回值。
+   又比如在方法中调用另一个方法，操作数栈用于保存被调用方法的参数和接受该方法的返回值。
 
 3. 动态链接（Dynamic Linking）
 
@@ -71,7 +71,7 @@
 
    如果没有遇到异常退出的情况，会将返回值传递给该方法的调用者，把返回值压入上层方法的操作数栈。如果执行中遇到异常，并且没有处理这个异常，当前方法退出，这个时候没有值返回。
 
-## 微观分析递归
+## 2. 微观分析递归
 
 　　对上面的阶乘递归程序，对其进行底层分析下。求 4 的阶乘。
 
@@ -81,7 +81,7 @@
 
 　　从递归到回归阶段就整个递归过程。
 
-## 宏观分析递归
+## 3. 宏观分析递归
 
 　　通过上面的对递归的微观温习，感觉很简单，因为这是比较简单的递归程序。
 
@@ -91,13 +91,13 @@
 
 　　从宏观上去思考，更容易把思路放到具体的逻辑上，而不是具体的递归细节。
 
-## 递归的优点与不足
+## 4. 递归的优点与不足
 
 　　递归的优点，在多数情况下，递归的实现更加优雅，代码逻辑的可读性更强。但是，如果递归的次数达到一定的数量就会抛出栈溢出错误。
 
 　　如果使用循环，程序的性能可能更高；如果使用递归，程序可能更容易理解。
 
-### 尾部递归
+### 4.1. 尾部递归
 
 　　如果一个函数中所有递归形式的调用都出现在函数的末尾，递归调用在整个函数中是最后执行的语句，并且它的返回值不属于表达式的一部分，称之为尾递归。
 
@@ -180,7 +180,7 @@ public int factorial(int);
       17: ireturn
 ```
 
-　　Java 没有对尾递归做任何优化处理，Java 虽然没有对尾部递归做出优化，但是尾部递归式没有 “ 回归阶段 ”，因为最后一次方法的执行就可以得到最终结果，可以在 Eclipse 上分别对上面的两种递归调试下。
+　　Java 没有对尾递归做任何优化处理，Java 虽然没有对尾部递归做出优化，但是尾部递归是没有 “ 回归阶段 ”，因为最后一次方法的执行就可以得到最终结果，可以在 Eclipse 上分别对上面的两种递归调试下。
 
 　　C 和 C++ 对尾部递归的优化是类似循环的方式，这样就不会每次递归的时候都去创建栈帧。如：
 
@@ -194,7 +194,7 @@ unsigned fac_tailrec(unsigned acc, unsigned n) {
 }
 ```
 
-### 循环
+### 4.2. 循环
 
 　　有的时候解决问题使用普通的循环更加优雅，比如对 [1 ~ n] 的数求和，使用循环累加即可。
 
@@ -219,9 +219,7 @@ unsigned fac_tailrec(unsigned acc, unsigned n) {
     }
 ```
 
-
-
-## 参考文章
+## 5. 参考文章
 
 1. [数据结构与算法（五）深入理解递归](https://chiclaim.blog.csdn.net/article/details/80536238)
 
