--- a/DataStructure/算法/排序算法/归并排序.md
+++ b/DataStructure/算法/排序算法/归并排序.md
@@ -2,11 +2,11 @@
 
 　　归并排序是建立在归并操作上的一种有效的排序算法，1945 年由约翰·冯·诺伊曼首次提出。该算法是采用分治法（Divide and Conquer）的一个非常典型的应用，且各层分治递归可以同时进行。
 
-　　归并排序是分治法的一个典型应用，它的主要思想是：将待排序序列分为两部分，对每部分递归地应用归并排序，在两部分都排好序后进行合并。
-
-## 基本思想
+## 1. 基本思想
 
 　　归并排序算法是将两个（或两个以上）有序表合并成一个有序表，即把待排序序列分成若干个子序列，每个子序列是有序的。然后再把有序子序列合并为整体有序序列。
+
+　　它的主要思想是：将待排序序列分为两部分，对每部分递归地应用归并排序，在两部分都排好序后进行合并。
 
 ![](image/归并排序.gif)
 
