--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -152,6 +152,11 @@
 3. ViewGroup 事件分发机制
 4. huffmen树
 5. 顺序查找
+6. 平衡查找树之2-3查找树（2-3 Tree）
+7. 递归
+8. Set 集合
+9. 插值查找
+10. 二叉树查找
 
 #### 计划
 
@@ -159,10 +164,10 @@
    1. 查找算法知识 - 7/19
    2. 顺序查找 - 已完成
    3. 二分查找 - 7/15
-   4. 插值查找 -7/20
+   4. 插值查找 -已完成
    5. 斐波那契查找 - 7/26
-   6. 二叉树查找 - 7/21
-   7. 平衡查找树之2-3查找树（2-3 Tree） - 7/22
+   6. 二叉树查找 - 已完成
+   7. 平衡查找树之2-3查找树（2-3 Tree） - 已完成
    8. 平衡查找树之红黑树（Red-Black Tree） - 7/23
    9. B 树和 B+ 树（B Tree/B+ 树）  - 7/24
    10. 分块查找 - 7/25
@@ -178,19 +183,18 @@
    8. 归并排序
    9. 基数排序
 3. 常用的五大算法
-   1. 递归
+   1. 递归 - 已完成
    2. 回溯算法
    3. 分治算法
    4. 贪心算法
 4. 红黑树
-5. b树 - 7/14
-6. b+树 -7/14
-7. 图 - 7/15
-8. Set 集合 -7/16
-9. 并查集 - 7/16
-10. 堆 - 7/17
-11. 哈希表 - 7/17
-12. 线性表 - 7/18
+5. b树
+6. b+树
+7. 图
+8. Set 集合
+9. 并查集
+10. 堆
+12. 线性表
 13. 栈 - 7/18
 14. glide 整理
 15. gradle
@@ -198,6 +202,7 @@
 17. 简历
 18. NIO
 19. 组件化与插件化
+19. 适配
 
 
 
@@ -232,15 +237,14 @@
 
 7/19
 
-* 哈希表
 * glide 整理
 * 冒泡排序
 
 7/20
 
 * 归并排序
-* 平衡查找树之2-3查找树（2-3 Tree）
-* 递归
+* 平衡查找树之2-3查找树（2-3 Tree）- 已完成
+* 递归 - 已完成
 
 7/21
 
