--- a/DataStructure/数据结构/树/红黑树.md
+++ b/DataStructure/数据结构/树/红黑树.md
@@ -121,7 +121,7 @@
 
 　　可以把 PP 设为红色，I 和 P 设为黑色吗？答案是可以。但把 PP 设为红色，显然又会出现情景 4.1 的情况，需要自底向上处理，做多了无谓的操作，既然能自己消化就不要麻烦祖辈们了。
 
-##### 3.4.2.2. 情景 4.2.2：插入节点是其父节点的左子节点
+##### 3.4.2.2. 情景 4.2.2：插入节点是其父节点的右子节点
 
 　　这种情景显然可以转换为情景 4.2.1。
 
