--- a/DataStructure/算法/分治算法.md
+++ b/DataStructure/算法/分治算法.md
@@ -1,6 +1,100 @@
 #  分治算法
 
-　　分治算法
+## 基本概念
+
+　　在计算机科学中，分治法试一种很重要的算法。字面上的解释是 “分而治之 ”，就是把一个复杂的问题分成两个或更多的相同或相似的子问题，再把子问题分成更小的子问题......知道最后子问题可以简单的直接求解，原问题的解及子问题的解的合并。这恶技巧试很多高效算法的基础，如排序算法（快速排序、归并排序）、傅里叶变换（快速傅里叶变换）。。。。。。
+
+　　任何一个可以用计算机求解的问题所需的计算时间都与其规模有关。问题的规模越小，越容易直接求解，解题所需的计算时间也越少。例如，对于 n 个元素的排序问题，当 n=1 时，不需任何计算。n=2 时，只要作一次比较即可排好序。n= 3 时只要作 3 次比较即可，...。而当 n 较大时，问题酒补那么容易处理了。要想直接解决一个规模较大的问题，有时是相当困难的。
+
+## 基本思想及策略
+
+　　分治法的设计思想是：将一个难以直接解决的大问题，分割成一些规模较小的相同问题，以便各个击破，分而治之。
+
+　　分治策略是：对于一个规模为 n 的问题，若该问题可以容易的解决（比如说规模 n 较小）则直接解决，否则将其分解为 k 个规模较小的子问题，这些子问题互相独立且与原问题象时相同，递归地解这些子问题，然后将各子问题的解合并得到原问题的解。这种算法设计策略叫做分治法。
+
+　　如果原问题可分割成 k 个子问题，1<k<=n，且这些子问题都可解并可利用这些子问题的解求出原问题的解，那么这种分治法就是可行的。由分治法产生的子问题往往是原问题的较小模式，这就为使用递归技术提供了方便。在这种情况下，反复应用分治手段，可以使子问题与原问题类型一致而其规模却不断缩小，最终使子问题缩小到很容易直接求出其解。这自然导致递归过程的产生。分治与递归像一对孪生兄弟，经常同时应用再算法设计之中，并由此产生许多高效算法。
+
+## 分支法适用的情况
+
+　　分治法所能解决的问题一般具有以下几个特征：
+
+1. 该问题的规模缩小到一定的程度就可以容易的解决。
+2. 该问题可以分解为若干个规模较小的相同问题，即该问题具有最优子结构性质。
+3. 利用该问题分解出的子问题的解可以合并为该问题的解。
+4. 该问题所分解出的各个子问题是相互独立的，即子问题之间不包含公共的子子问题。
+
+　　第一条特征是绝大多数问题都可以满足的，因为问题的接断复杂性一般是随着问题规模的增加而增加。
+
+　　第二个特征是应用分治法的前提它也是大多数问题可以满足的，此特征反映了递归思想的应用。
+
+　　第三条特征是关键，能否利用分治法完全取决于问题是否具有第三条特征，如果具备了第一条和第二条特征，而不具备第三条特征，则可以考虑用贪心法或动态规划法。
+
+　　第四条特征设计到分治法的效率，如果各子问题是不独立的则分治法要做许多不必要的工作，重复地解公共地子问题，此时虽然可用分治法，但一般用动态规划法较好。
+
+## 分治法的基本步骤
+
+　　分治法在每一次递归上都有三个步骤：
+
+　　step 1 分解：将原问题分解为若干个规模较小，相互独立，与原问题形式相同的子问题；
+
+　　step 2 解决：若子问题规模较小而容易被解决则直接解，否则递归地解各个子问题；
+
+　　step 3 合并：将各个子问题地解合并为原问题的解。
+
+　　它的一般的算法设计模式如下：
+
+```java
+Divide-and-Conquer(P)
+
+if |P|≤n0
+
+	then return(ADHOC(P))
+
+// 将P分解为较小的子问题 P1 ,P2 ,...,Pk
+
+for i←1 to k
+
+	do yi ← Divide-and-Conquer(Pi) △ 递归解决Pi
+
+T ← MERGE(y1,y2,...,yk) △ 合并子问题
+
+return(T)
+```
+
+　　其中 |P| 表示问题 P 的规模；n0 为一阈值，表示当问题 P 的规模不超过 n0 时，问题已容易直接解出，不必再继续分解。
+
+　　ADHOC(P) 是该分治法中的基本子算法，用于直接解小规模的问题 P。因此，当 P 的规模不超过 n0 时直接用算法 ADHOC(P) 求解。算法 MERGE(y1,y2,......,yk) 是该分治法中的合并子算法，用于将 P 的子问题 P1,P2,...,PK 的相应的解 y1,y2,..,yk 合并成 P 的解。
+
+## 分治法的复杂性分析
+
+　　一个分治法将规模为 n 的问题分成 k 个规模为 n/m 的子问题去解。设分解阈值 n0 = 1，且 adhoc 解规模为 1 的问题耗费 1 个单位时间。再设将原问题分解为 k 个子问题以及用 merge 将 k 个子问题的解合并为原问题的解需用 f(n) 个单位时间。用 T(n) 表示分治法解规模为 |P|=n 的问题所需的计算时间，则有：
+
+　　T(n) = k T(n/m) +f(n)
+
+　　通过迭代法求得方程的解。
+
+　　递归方程及其解只给出 n 等于 m 的方幂时 T(n) 的值，但是如果认为 T(n) 足够平滑，那么由 n 等于 m 的方幂时 T(n) 的值可以估计T(n) 的增长速度。通常假定 T(n) 是单调上升的，从而当 mi<=n<mi+1 时，T(mi) <= T(n) < T(mi+1)。
+
+## 可使用分治法求解的一些经典问题
+
+1. 二分搜索
+2. 大整数乘法
+3. Strassen 矩阵乘法
+4. 棋盘覆盖
+5. 合并排序
+6. 快速排序
+7. 线性时间选择
+8. 最接近点对问题
+9. 循环赛日程表
+10. 汉诺塔
+
+## 依据分治法设计程序时的思维过程
+
+　　实际上就是类似于数学归纳法，找到解决本问题的求解方程公式，然后根据方程公式设计递归程序。
+
+1. 一定是先找到最小问题规模时的求解方法
+2. 然后考虑随着问题规模增大时的求解方法
+3. 找到求解的递归函数式后（各种规模或因子），设计递归程序即可。
 
 ## 参考文章
 
