--- a/DataStructure/算法/排序算法/排序算法总结.md
+++ b/DataStructure/算法/排序算法/排序算法总结.md
@@ -1,6 +1,25 @@
 #  排序算法总结
 
-　　排序算法
+　　常见排序算法如下：
+
+1. 直接插入排序
+2. 希尔排序
+3. 简单选择排序
+4. 堆排序
+5. 冒泡排序
+6. 快速排序
+7. 归并排序
+8. 技术排序
+
+　　它们都属于内部排序，也就是只考虑数据量较小仅需要使用内部的排序算法，它们之间关系如下：
+
+![](image/排序算法.png)
+
+　　稳定与非稳定：如果一个排序算法能够保留数组中重复元素的相对位置则可以被称为是稳定的。反之，则是非稳定的。
+
+## 直接插入排序
+
+
 
 ## 参考文章
 
