排序与红黑树

--- a/DataStructure/数据结构/树/红黑树.md
+++ b/DataStructure/数据结构/树/红黑树.md
@@ -107,7 +107,7 @@
 
 #### 3.4.2. 情景 4.2：叔叔节点不存在或为黑节点，并且插入节点的父亲节点是祖父节点的左子节点。
 
-　　即不算情景 4.1. 自底向上处理时的情况，叔叔节点非红即为叶子节点（Nil）。因为如果叔叔节点为黑节点，而父节点为红节点，那么叔叔节点所在的子树的黑色节点就比父节点所在子树的多了，这部满足红黑树的性质 5。后续情景同样如此。
+　　即不算情景 4.1. 自底向上处理时的情况，叔叔节点非红即为叶子节点（Nil）。因为如果叔叔节点为黑节点，而父节点为红节点，那么叔叔节点所在的子树的黑色节点就比父节点所在子树的多了，这不满足红黑树的性质 5。后续情景同样如此。
 
 ##### 3.4.2.1. 情景 4.2.1 ：插入节点是其父节点的左子节点
 
@@ -327,6 +327,439 @@
 * 兄弟都帮忙不了的，通过父母，找远方亲戚（情景 2.1.2.3 和情景 2.2.2.3）
 
 ## 5. 实现红黑树
+
+```java
+/**
+ * 红黑树
+ */
+public class RBTree {
+
+    private enum Color {RED, BLACK}
+
+    private enum Child {LEFT, RIGHT}
+
+    private class Node {
+        private Integer key; // key
+        private Object data; // value
+        private Node leftChild; //左子结点
+        private Node rightChild; //右子节点
+        private Node parent; //父节点
+        private Color color; // 红黑标示
+
+        private Node() {
+
+        }
+
+        Node(Object key, Object data, Color color) {
+            this.key = (Integer) key;
+            this.data = data;
+            this.color = color;
+        }
+
+        public Color getColor() {
+            return color;
+        }
+
+        public void setColor(Color color) {
+            this.color = color;
+        }
+
+        public boolean isRed() {
+            if (this.color.equals(Color.RED)) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    }
+
+    private RBTree.Node root = null;
+
+    /**
+     * 插入数据
+     *
+     * @param key   插入数据
+     * @param value
+     * @return 数据重复返回 false
+     */
+    public boolean insertNode(Integer key, Object value) {
+        return insertNode(root, key, value, null, Child.LEFT);
+    }
+
+    private boolean insertNode(Node node, Integer key, Object value, Node preNode, Child child) {
+        if (node == null) {
+            node = new Node(key, value, Color.RED);
+            if (preNode == null) { // 情景 1：红黑树为空树父节点为空，将 node 设为根结点
+                root = node;
+            } else {
+                if (child.equals(Child.LEFT)) {
+                    preNode.leftChild = node;
+                } else {
+                    preNode.rightChild = node;
+                }
+                node.parent = preNode;
+            }
+
+            // 通过 RB_INSERT_FIXUP 对红黑树的结点进行颜色修改以及旋转，让树仍然是一棵红黑树
+            RB_INSERT_FIXUP(node);
+            return true;
+        } else {
+            if (key.compareTo(node.key) == 0) { // 情景 2：插入结点的 key 已存在
+                // root = node;
+                return false;
+            } else if (key.compareTo(node.key) < 0) {
+                if (!insertNode(node.leftChild, key, value, node, Child.LEFT)) {
+                    return false;
+                }
+            } else {
+                if (!insertNode(node.rightChild, key, value, node, Child.RIGHT)) {
+                    return false;
+                }
+            }
+            return true;
+        }
+
+    }
+
+    /**
+     * @param node 插入结点
+     */
+    private void RB_INSERT_FIXUP(Node node) {
+        Node pNode = node.parent;
+        if (node == root) { // 插入结点为根结点，直接改变颜色
+            node.setColor(Color.BLACK);
+            return;
+        }
+        if (node == null || pNode.color.equals(Color.BLACK)) { // 情景 3：父节点为黑色，由于插入的结点是红色，并不会影响红黑树的平衡，直接插入即可，无需做自平衡。处理：直接插入
+            return;
+        } else { // 情景 4：插入结点的父节点为红节点
+            Node graNode = node.parent.parent;
+//            System.out.println("RB_INSERT_FIXUP node:" + node.data + node.color + ",pNode:" + pNode.data + pNode.color);
+            if (pNode == graNode.leftChild) { // 父节点是祖父结点的左子节点
+                if (graNode.rightChild != null && graNode.rightChild.isRed()) { // 情景 4.1：叔叔结点存在并且为红节点
+                    // 将 P（父节点） 和 S（叔叔节点） 设置为黑色（当前插入结点 I）将 gra （爷爷节点）设置为红色，把 gra 设置为当前插入结点
+                    pNode.setColor(Color.BLACK);
+                    graNode.rightChild.setColor(Color.BLACK);
+                    graNode.setColor(Color.RED);
+//                    System.out.println("RB_INSERT_FIXUP node:" + node.data + node.color + ",pNode:" + pNode.data + pNode.color+",graNode:"+graNode.data+graNode.color);
+                    RB_INSERT_FIXUP(graNode);
+                } else { // 情景 4.2：叔叔结点不存在或为黑节点，并且插入结点的父亲结点是祖父结点的左子结点
+                    if (node == pNode.leftChild) { // 情景 4.2.1 插入结点是其父节点的左子节点
+                        // 将 P 设为黑色，将 gra 设为红色，对 gra 进行右旋
+                        pNode.setColor(Color.BLACK);
+                        graNode.setColor(Color.RED);
+                        RRotate(graNode);
+                    } else { // 情景 4.2.2：插入节点是其父节点的右子节点
+                        // 对 P 进行左旋，把 P 设置为插入节点，得到情景 4.2.1. 进行情景 4.2.1. 的处理
+                        LRotate(pNode);
+                        RB_INSERT_FIXUP(pNode);
+                    }
+                }
+            } else { // 4.3 父节点是祖父节点的右子节点
+                if (graNode.leftChild != null && graNode.leftChild.isRed()) { // 情景 4.3：叔叔节点存在并且为红节点
+                    // 将 P 和 S 设置为黑色（当前插入节点 I）将 gra 设置为红色，把 gra 设置为当前插入节点
+                    pNode.setColor(Color.BLACK);
+                    graNode.leftChild.setColor(Color.BLACK);
+                    graNode.setColor(Color.RED);
+                    RB_INSERT_FIXUP(graNode);
+                } else { // 情景 4.3.1：叔叔节点不存在或为黑节点，并且插入节点的父亲节点是祖父节点的左子节点
+                    if (node == pNode.rightChild) { // 情景 4.3.1：插入节点是其父节点的右子节点
+                        // 将 P 设为黑色，将 gra 设为红色，对 PP 进行左旋
+                        pNode.setColor(Color.BLACK);
+                        graNode.setColor(Color.RED);
+                        LRotate(graNode);
+                    } else { // 情景 4.3.2：插入节点是其父节点的右子节点
+                        // 对 P 进行右旋，把 P 设置为插入节点，得到情景 4.3.1，进行情景 4.3.1. 的处理
+                        RRotate(pNode);
+                        RB_INSERT_FIXUP(pNode);
+                    }
+                }
+            }
+        }
+    }
+
+    /**
+     * 右旋
+     *
+     * @param T
+     */
+    private void RRotate(Node T) {
+        Node lc = T.leftChild;
+        T.leftChild = lc.rightChild;
+        if (T.leftChild != null) {
+            T.leftChild.parent = T;
+        }
+        lc.rightChild = T;
+        returnPNode(T, lc);
+    }
+
+    private Node returnPNode(Node T, Node node) {
+        if (T == root) {
+            root = node;
+        } else if (T.parent.leftChild == T) {
+            T.parent.leftChild = node;
+        } else {
+            T.parent.rightChild = node;
+        }
+        node.parent = T.parent;
+        T.parent = node;
+        return node;
+    }
+
+    /**
+     * 左旋
+     *
+     * @param T
+     */
+    private void LRotate(Node T) {
+        Node rc = T.rightChild;
+        T.rightChild = rc.leftChild;
+        if (T.rightChild != null) {
+            T.rightChild.parent = T;
+        }
+        rc.leftChild = T;
+        returnPNode(T, rc);
+    }
+
+    /**
+     * 中序
+     */
+    public void ldrTraversal() {
+        ldrTraversal(root);
+    }
+
+    /**
+     * 中序
+     *
+     * @param node
+     */
+    private void ldrTraversal(Node node) {
+        if (node != null) {
+            ldrTraversal(node.leftChild);
+            System.out.print(node.key + ":" + node.color + ";");
+            ldrTraversal(node.rightChild);
+        }
+    }
+
+    /**
+     * 先序
+     */
+    public void dlrTraversal() {
+        dlrTraversal(root);
+    }
+
+    /**
+     * 先序
+     *
+     * @param node
+     */
+    private void dlrTraversal(Node node) {
+        if (node != null) {
+            System.out.print(node.key + ":" + node.color + ";");
+            dlrTraversal(node.leftChild);
+            dlrTraversal(node.rightChild);
+        }
+    }
+
+    public void lrdTraversal() {
+        lrdTraversal(root);
+    }
+
+    private void lrdTraversal(Node node) {
+        if (node != null) {
+            lrdTraversal(node.leftChild);
+            lrdTraversal(node.rightChild);
+            System.out.print("key:" + node.key + "-value" + node.data + ":" + node.color + ";");
+        }
+    }
+
+    /**
+     * 搜索
+     *
+     * @param key 传入 key
+     * @return 返回 value
+     */
+    public Object aearch(Integer key) {
+        return searchNode(key, root);
+    }
+
+    public Node searchNode(Integer key, Node node) {
+        if (node == null) {
+            return null;
+        }
+        if (node.key.compareTo(key) == 0) {
+            return node;
+        } else if (key.compareTo(node.key) < 0) {
+            return searchNode(key, node.leftChild);
+        } else {
+            return searchNode(key, node.rightChild);
+        }
+    }
+
+    /**
+     * key 删除 key 对应的 node
+     *
+     * @param key
+     * @return
+     */
+    public boolean remove(Integer key) {
+        if (this.root != null) {
+            Node node = searchNode(key, root);
+            if (node == null) {
+                return false;
+            }
+            removeNode(node);
+            return true;
+        }
+        return false;
+    }
+
+    /**
+     * 删除的节点
+     *
+     * @param node
+     */
+    private void removeNode(Node node) {
+        if (node == null) {
+            return;
+        }
+        if (node.leftChild == null && node.rightChild == null) { // 情景 1：若删除节点无子节点，直接删除。
+            changeNode(node, null);
+        } else if (node.leftChild != null && node.rightChild != null) { // 情景 3：若删除节点有两个子节点，用后继节点（大于删除节点的最小节点）替换删除节点。
+            Node rNode = node.rightChild;
+            while (rNode.leftChild != null) { // 找到后继节点
+                rNode = rNode.leftChild;
+            }
+            // 交换位子
+            changeNode(node, rNode); // 用后继节点替换要删除界定啊
+        } else { // 情景 2：若删除节点只有一个子节点，用子节点替换删除节点。
+            if (node.leftChild != null) {
+                changeNode(node, node.leftChild);
+            } else {
+                changeNode(node, node.rightChild);
+            }
+        }
+    }
+
+    /**
+     * 两节点位置交换
+     * 交换后删除替换节点 fixupNode
+     *
+     * @param delNode   要删除节点
+     * @param fixupNode 替换节点
+     */
+    private void changeNode(Node delNode, Node fixupNode) {
+        RB_DELETE_FIXUP(fixupNode);
+        if (fixupNode == null) {
+            if (delNode.parent.leftChild == delNode) {
+                delNode.parent.leftChild = null;
+            } else {
+                delNode.parent.rightChild = null;
+            }
+            return;
+        }
+        Object data = delNode.data;
+        Color color = delNode.color;
+        Integer key = delNode.key;
+        if (delNode == root) { // 交换时如果删除节点是根节点，颜色直接改成黑色
+            delNode.setColor(Color.BLACK);
+        }
+//        else {
+//            delNode.color = fixupNode.color;
+//        }
+        delNode.key = fixupNode.key;
+        delNode.data = fixupNode.data;
+        fixupNode.key = key;
+        fixupNode.data = data;
+        fixupNode.color = color;
+        removeNode(fixupNode);
+    }
+
+    private void RB_DELETE_FIXUP(Node fixupNode) {
+        if (fixupNode == null || fixupNode.isRed()) { // 情景 1：替换节点是红色节点
+            // 颜色变为删除节点的颜色
+            return;
+        } else { // 情景 2：替换节点是黑节点
+            Node bNode = fixupNode.parent.rightChild;
+            if (fixupNode == fixupNode.parent.leftChild) { // 情景 2.1：替换节点是其父节点的左子节点
+                // 情景 2.1.1：替换节点的兄弟节点是红节点
+                if (bNode.isRed()) {
+                    bNode.setColor(Color.BLACK);
+                    fixupNode.parent.setColor(Color.RED);
+                    RRotate(fixupNode.parent);
+                    RB_DELETE_FIXUP(fixupNode);
+                } else { // 情景 2.1.2：替换节点的兄弟节点是黑节点
+                    // 情景 2.1.2.1：替换节点的兄弟节点的右子节点是红节点，左子节点任意颜色
+                    if (bNode.rightChild != null && bNode.rightChild.isRed()) {
+                        // 将 S 的颜色设为 P 的颜色，将 P 设为黑色，将 SR 设为黑色，对 P 进行左旋
+                        bNode.color = fixupNode.parent.color;
+                        fixupNode.parent.setColor(Color.BLACK);
+                        bNode.rightChild.setColor(Color.BLACK);
+                        LRotate(fixupNode.parent);
+                    } else if (bNode.leftChild != null && bNode.leftChild.isRed()) {
+                        // 情景 2.1.2.2：替换节点的兄弟节点的右子节点为黑节点，左子节点为红节点
+                        // 将 S 设为红色，将 SL 设为黑色，对 S 进行右旋，得到情景 2.1.2.1，进行请将 2.1.2.1 的处理
+                        bNode.setColor(Color.RED);
+                        bNode.leftChild.setColor(Color.BLACK);
+                        RRotate(bNode);
+                        RB_DELETE_FIXUP(fixupNode);
+                    } else { // 删除情景 2.1.2.3：替换节点的兄弟节点的子节点都为黑节点
+                        // 将 S 设为红色，把 P 作为新的替换节点，重新进行删除节点情景处理
+                        fixupNode.parent.setColor(bNode.color);
+                        bNode.setColor(Color.RED);
+                        RB_DELETE_FIXUP(fixupNode.parent);
+                    }
+                }
+            } else {
+                // 删除情景 2.2：替换节点是其父节点的右子节点
+                // 删除情景 2.2.1：替换节点的兄弟节点是红节点
+                if (bNode.isRed()) {
+                    // 将 S 设为黑色，将 P 设为红色，对 P 进行右旋，得到情景 2.2.2.3，进行情景 2.2.2.3.的处理
+                    bNode.setColor(Color.BLACK);
+                    fixupNode.parent.setColor(Color.RED);
+                    LRotate(fixupNode.parent);
+                    RB_DELETE_FIXUP(fixupNode);
+                } else { // 删除情景 2.2.2：替换节点的兄弟节点是黑节点
+                    // 删除情景 2.2.2.1：替换节点的兄弟节点左子节点是红节点，右子节点任意颜色
+                    if (bNode.leftChild != null && bNode.leftChild.isRed()) {
+                        // 将 S 的颜色设为 P 的颜色，将 P 设为黑色，将 SL 设为黑色，对 P 进行右旋
+                        bNode.color = fixupNode.parent.color;
+                        fixupNode.parent.setColor(Color.BLACK);
+                        bNode.leftChild.setColor(Color.BLACK);
+                        RRotate(fixupNode.parent);
+                    } else if (bNode.rightChild != null && bNode.rightChild.isRed()) { // 删除情景 2.2.2.2：替换节点的兄弟节点的左子节点为黑节点，右子节点为红节点
+                        // 将 S 设为红色，将 SR 设为黑色，对 S 进行左旋，得到情景 2.2.2.1，进行情景 2.2.2.1 的处理
+                        bNode.setColor(Color.RED);
+                        bNode.rightChild.setColor(Color.BLACK);
+                        LRotate(bNode);
+                        RB_DELETE_FIXUP(fixupNode);
+                    } else { // 删除情景 2.2.2.3：替换节点的兄弟节点的子节点都为黑节点
+                        // 将 S 设为红色，把 P 作为新的替换节点，重新进行删除节点情景处理
+                        bNode.setColor(Color.RED);
+                        RB_DELETE_FIXUP(fixupNode.parent);
+                    }
+                }
+            }
+        }
+    }
+
+    public static void main(String[] args) {
+        RBTree rbt = new RBTree();
+        int[] data = {2, 4, 15, 11, 19, 3, 12, 14, 16, 9, 13, 17, 7, 8, 5, 1, 18, 6};
+        for (int i = 0; i < data.length; i++) {
+            System.out.println("\n" + data[i]);
+            rbt.insertNode(data[i], data[i]);
+            // 先序遍历
+            rbt.dlrTraversal();
+        }
+        System.out.println("\nremove 15");
+        rbt.remove(15);
+        rbt.dlrTraversal();
+    }
+}
+```
+
+
 
 ## 6. 参考文章
 
