--- a/DataStructure/算法/查找算法/分块查找.md
+++ b/DataStructure/算法/查找算法/分块查找.md
@@ -1,6 +1,61 @@
 #  分块查找
 
-　　分块查找
+## 分块查找的基本思想
+
+　　对于需要经常增加或减少数据的数据元素列表，每次增加或减少数据之后排序，或者每次查找前排序都不是很好的选择，这样无疑会增加查找的复杂度，在这种情况下可以采用分块查找。
+
+　　分块查找是结合二分查找和顺序查找的一种改进方法。在分块查找里有索引表和分块的概念。索引表就是帮助分块查找的一个分块依据，其实就是一个数组，用来存储每块的最大存储值，也就是范围上限，分块就是通过索引表把数据分为几块。
+
+　　在每需要增加一个元素的时候，就需要首先根据索引表，知道这个数据应该在哪一块，然后直接把这个数据家到相应的块里面，而块内的元素之间本身不需要有序。因为块内无须有序，所以分块查找特别适合元素经常动态变化的情况。
+
+　　分块查找只需要索引表有序，当索引表比较大的时候，可以对索引表进行二分查找，锁定块的位置，然后对块内的元素使用顺序查找。这样的总体性能虽然不会比二分查找好，却比顺序查找好很多，最重要的是不需要数列完全有序。
+
+　　分块查找又称为索引顺序查找，它是顺序查找的一种改进方法。
+
+　　算法思想：将 n 个数据元素 “ 按块有序 ” 划分为 m 块（m<=n）。每一块中的节点不必有序，但块与块之间必须 “ 按块有序 ”；即第 1 块中任一元素的关键字都必须小于第 2 块中任一元素的关键字；而第 2 块中的任一元素又都必须小于第 3 块中的任一元素，......
+
+　　算法流程：
+
+1. step 1 先选取各块中的最大关键字构成一个索引表；
+2. 查找分两个部分：先对索引表进行二分查找或顺寻查找，以确定待查记录在哪一块中；然后，在已确定的块中用顺序法进行查找。
+
+![](image/分块查找1.jpg)
+
+　　分块查找要求把一个数据分为若干块，每一块里面的元素可以是无序的，但是块与块之间的元素需要是有序的。对于一个非递减的数列来说，第 i 块中的每个元素一定比第 i-1 块中的任意元素大。同时，分块查找需要一个索引表，用来限定每一块的范围。在增加、删除、查找元素时都需要用到。
+
+　　所示是一个已经分好块的数据，同时有个索引表，现在要在数据中插入一个元素：
+
+![](image/分块查找2.jpg)
+
+　　首先，看到索引表是 10、20、30，对于元素 15 来说，应该将其放在分块 2 中。于是，分块 2 的数据变为 12、18、15、12、15，直接把 15 插入分块 2 的最后就好了。
+
+　　接下来就是查找操作。如果要查找图 1 中的 27 这个数，则首先该怎么做呢？通过二分查找索引表，发现 27 在分块 3 里，然后在分块 3 中顺序查找，得到 27 存在于数列中。
+
+## 分块查找的复杂度
+
+　　分块查找由于只需要索引表有序，所以特别适合用于在动态变化的数据元素序列中查找。但是如何分块比较复杂。如果分块过于稀疏，则可能导致每一块的内容过多，在顺序查找时效率很低；如果分块过密，则优惠导致块数很多，无论是插入还是删除数据，都会频繁地进行二分查找；如果块数特别多，则基本上和直接二分查找地动态插入数据类似，这样分块查找就没有意义了。
+
+　　所以对于分块查找来说，可以根据数据量的大小及数据的取键来进行对分块的选择。
+
+　　分块查找的平均查找长度为索引查找和块内查找的平均长度之和，设索引查找和块内查找的平均查找长度分别为 L1,Ls，则分块查找的平均查找长度为：
+
+　　ASL = L1+Ls
+
+　　设将长度为 n 的查找表均匀的分为 b 块，每块有 s 个记录，在等概率的情况下，若在块内和索引表中均采用顺序查找，则平均查找长度为：
+
+　　此时，若 s=√n，则平均查找长度取最小值：√n+1，若对索引表采用折半查找时，则平均查找长度为：
+
+　　ASL = L1+Ls = log2(b+1)+(s+1)/2
+
+　　时间复杂度：假设有 b 块，查询哪个块：log2b，在块中查找 n/b，总共 O(log2b+n/b)。
+
+## 分块查找的代码
+
+```
+
+```
+
+
 
 ## 参考文章
 
